--- a/app/pages/home/home.component.html
+++ b/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
     <ListView [items]="eventList" class="small-spacing">
       <template let-item="item">
         <GridLayout columns="auto, *" rows="auto">
-          <Label col="0" [text]="item.when.start" class="medium-spacing"></Label>
+          <Label col="0" [text]="item.when.start | amTimeAgo" class="medium-spacing"></Label>
           <Label col="1" [text]="item.title" class="medium-spacing"></Label>
         </GridLayout>
       </template>
