--- a/app/app.css
+++ b/app/app.css
@@ -9,6 +9,8 @@
 
 .action-bar {
   background-color: #AA0000;
+  font-family: "serif";
+  font-weight: 100;
 }
 
 .small-spacing {
@@ -21,4 +23,31 @@
 
 Page {
   background-color: white;
+}
+
+/*
+ * Event List Styles
+ */
+.event-ticket{
+  background-color: #AA0000;
+  color: white;
+  clip-path: polygon(2% 2%, 5% 0, 100% 0, 100% 100%, 5% 100%, 2% 98%, 0 95%, 0 5%);
+  font-family: "RisingSun-Light";
+}
+
+.event-ticket > .event-day{
+  font-size: 24;
+  font-weight:900;
+}
+
+.event-ticket > .event-month{
+  font-size: 16;
+}
+
+/*
+ * Event Details Styles
+ */
+.detail-label {
+  font-weight: bold;
+  color: black;
 }
