--- a/app/pages/shared/side-drawer-page/side-drawer-page.component.html
+++ b/app/pages/shared/side-drawer-page/side-drawer-page.component.html
@@ -11,7 +11,7 @@
       </Label>
     </StackLayout>
     <ScrollView>
-      <StackLayout class="sidedrawer-content">
+      <StackLayout class="sidedrawer-content p-10">
         <GridLayout
             class="sidedrawer-list-item"
             *ngFor="let nav of navMenu">
