--- a/app/pages/home/home.component.html
+++ b/app/pages/home/home.component.html
@@ -3,7 +3,11 @@
 
 <side-drawer-page>
   <GridLayout>
-    <ListView [items]="eventList" (itemTap)="showDetails($event)" class="small-spacing m-5">
+    <ListView
+      [items]="(eventList | eventsFilter:[filter.searchText,filter.category])"
+      (itemTap)="showDetails($event)"
+      class="small-spacing m-5 event-list"
+      [class.fadeIn]="listLoaded">
       <ng-template let-item="item">
         <GridLayout columns="80, *" rows="auto">
           <StackLayout col="0" orientation="vertical" class="event-ticket">
@@ -29,5 +33,12 @@
         </GridLayout>
       </ng-template>
     </ListView>
+    <ActivityIndicator
+      [busy]="isLoading"
+      [visibility]="isLoading ? 'visible' : 'collapse'"
+      row="1"
+      horizontalAlignment="center"
+      verticalAlignment="center">
+    </ActivityIndicator>
   </GridLayout>
 </side-drawer-page>
