--- a/app/pages/contact/contact.component.html
+++ b/app/pages/contact/contact.component.html
@@ -4,8 +4,13 @@
 <side-drawer-page>
   <StackLayout>
       <Label
-          class="h1 page-text"
+          class="h1 page-title m-10"
           [text]="text"
+          textWrap="true">
+      </Label>
+      <Label
+          class="p page-text m-10"
+          [text]="description"
           textWrap="true">
       </Label>
   </StackLayout>
