--- a/app/pages/shared/side-drawer-page/side-drawer-page.component.css
+++ b/app/pages/shared/side-drawer-page/side-drawer-page.component.css
@@ -1,7 +1,9 @@
 .sidedrawer-header{
-  padding-top:25;
-  padding-bottom:25;
+  padding-top:10;
+  padding-bottom:10;
   background-color: #A00;
+  /* default height: 148 */
+  height: 110;
 }
 
 .sidedrawer-header .sidedrawer-header-image{
