--- a/app/pages/event-details/event-details.component.html
+++ b/app/pages/event-details/event-details.component.html
@@ -4,7 +4,7 @@
 
 <side-drawer-page>
   <Label
-      class="h1 page-text event-title"
+      class="h1 page-text event-title m-5"
       [text]="event.title"
       textWrap="true">
   </Label>
