Minor changes for API compatibility.

--- a/app/pages/event-details/event-details.component.html
+++ b/app/pages/event-details/event-details.component.html
@@ -75,7 +75,7 @@
             textWrap="true">
           </Label>
           <Label
-            [text]="event.where.address"
+            [text]="(event.where.name) + ' - ' +(event.where.address)"
             class="m-5"
             textWrap="true">
           </Label>
