Add 'nativescript-directions' plugin to show event location.

--- a/app/pages/event-details/event-details.component.html
+++ b/app/pages/event-details/event-details.component.html
@@ -117,6 +117,12 @@
             (tap)="addToCalendar()">
           </Button>
 
+          <Button
+            text="Abrir en Mapa"
+            class="btn btn-primary"
+            (tap)="openInMap()">
+          </Button>
+
         </StackLayout>
       </StackLayout>
     </StackLayout>
